Archive2/92/2d894a8ae3bacc/output
main.cpp:4:6: error: variable has incomplete type 'void'
void foo(std::shared_ptr<int> i)
     ^
main.cpp:4:15: error: no member named 'shared_ptr' in namespace 'std'
void foo(std::shared_ptr<int> i)
         ~~~~~^
main.cpp:4:29: error: expected '(' for function-style cast or type construction
void foo(std::shared_ptr<int> i)
                         ~~~^
main.cpp:4:31: error: use of undeclared identifier 'i'
void foo(std::shared_ptr<int> i)
                              ^
main.cpp:4:33: error: expected ';' after top level declarator
void foo(std::shared_ptr<int> i)
                                ^
                                ;
main.cpp:14:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
6 errors generated.
